Fix Dockerfiles: HEALTHCHECK, jar-selector, JAR_PATH, and JVM optimizations
- Fix HEALTHCHECK: Replace busybox/wget with curl for distroless images
- Change jar-selector from alpine to busybox (lighter, faster)
- Fix JAR_PATH: Remove trailing slash requirement for better compatibility
- Optimize JVM flags: Remove redundant UseContainerSupport and java.security.egd
- Add JVM Class Data Sharing (-Xshare:auto) for 10-30% faster startup
- Update workflow to use jars instead of jars/ for JAR_PATH

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -146,7 +146,7 @@ jobs:
           cache-to: type=gha,mode=max,scope=${{ matrix.service }}
           build-args: |
             BUILDKIT_INLINE_CACHE=1
-            JAR_PATH=jars/
+            JAR_PATH=jars
 
   # Build Frontend
   build-frontend:
