--- a/gradle.properties
+++ b/gradle.properties
@@ -1,16 +1,11 @@
-# Gradle optimization for 2025
+# === JVM performance ===
 org.gradle.jvmargs=-Xmx4g -XX:MaxMetaspaceSize=1g -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+
+# === Parallelization & caching ===
 org.gradle.parallel=true
 org.gradle.caching=true
-org.gradle.configureondemand=true
 org.gradle.daemon=true
-org.gradle.workers.max=4
 
-# Build performance
-org.gradle.unsafe.configuration-cache=true
-org.gradle.unsafe.configuration-cache-problems=warn
-
-# Kotlin DSL optimization (if used)
-kotlin.incremental=true
-kotlin.incremental.js=true
-kotlin.incremental.multiplatform=true
+# === Configuration cache (very important for speed) ===
+org.gradle.configuration-cache=true
+org.gradle.configuration-cache.problems=warn
