--- a/settings.gradle
+++ b/settings.gradle
@@ -13,10 +13,21 @@ include 'equipment-service'
 include 'notification-service'
 
 buildCache {
-    remote(HttpBuildCache) {
-        url = System.getenv('GRADLE_BUILD_CACHE_URL') ?: 'https://cache-url'
-        push = true
-        enabled = System.getenv('GRADLE_BUILD_CACHE_URL') != null
+    local {
+        enabled = true
+    }
+
+    if (System.getenv("GRADLE_BUILD_CACHE_URL")) {
+        remote(HttpBuildCache) {
+            url = System.getenv("GRADLE_BUILD_CACHE_URL")
+            push = true
+            enabled = true
+
+            credentials {
+                username = System.getenv("GRADLE_CACHE_USER")
+                password = System.getenv("GRADLE_CACHE_PASSWORD")
+            }
+        }
     }
 }
 
