--- a/equipment-service/src/main/resources/application.yml
+++ b/equipment-service/src/main/resources/application.yml
@@ -32,9 +32,8 @@ spring:
         jdbc.batch_versioned_data: true
         generate_statistics: false
         cache:
-          use_second_level_cache: true
-          use_query_cache: true
-          provider_class: org.hibernate.cache.jcache.JCacheRegionFactory
+          use_second_level_cache: false
+          use_query_cache: false
         connection:
           provider_disables_autocommit: true
 
