--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
     networks:
       - healthcare-network
     healthcheck:
-      test: ["CMD-SHELL", "wget --no-verbose --tries=1 --spider http://localhost:8761/actuator/health || exit 1"]
+      test: ["CMD", "curl", "-f", "http://localhost:8761/actuator/health"]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -48,7 +48,7 @@ services:
     networks:
       - healthcare-network
     healthcheck:
-      test: ["CMD-SHELL", "wget --no-verbose --tries=1 --spider http://localhost:8080/actuator/health || exit 1"]
+      test: ["CMD", "curl", "-f", "http://localhost:8080/actuator/health"]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -84,7 +84,7 @@ services:
     networks:
       - healthcare-network
     healthcheck:
-      test: ["CMD-SHELL", "wget --no-verbose --tries=1 --spider http://localhost:8002/actuator/health || exit 1"]
+      test: ["CMD", "curl", "-f", "http://localhost:8002/actuator/health"]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -119,7 +119,7 @@ services:
     networks:
       - healthcare-network
     healthcheck:
-      test: ["CMD-SHELL", "wget --no-verbose --tries=1 --spider http://localhost:8003/actuator/health || exit 1"]
+      test: ["CMD", "curl", "-f", "http://localhost:8003/actuator/health"]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -154,7 +154,7 @@ services:
     networks:
       - healthcare-network
     healthcheck:
-      test: ["CMD-SHELL", "wget --no-verbose --tries=1 --spider http://localhost:8004/actuator/health || exit 1"]
+      test: ["CMD", "curl", "-f", "http://localhost:8004/actuator/health"]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -189,7 +189,7 @@ services:
     networks:
       - healthcare-network
     healthcheck:
-      test: ["CMD-SHELL", "wget --no-verbose --tries=1 --spider http://localhost:8005/actuator/health || exit 1"]
+      test: ["CMD", "curl", "-f", "http://localhost:8005/actuator/health"]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -224,7 +224,7 @@ services:
     networks:
       - healthcare-network
     healthcheck:
-      test: ["CMD-SHELL", "wget --no-verbose --tries=1 --spider http://localhost:8006/actuator/health || exit 1"]
+      test: ["CMD", "curl", "-f", "http://localhost:8006/actuator/health"]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -259,7 +259,7 @@ services:
     networks:
       - healthcare-network
     healthcheck:
-      test: ["CMD-SHELL", "wget --no-verbose --tries=1 --spider http://localhost:8007/actuator/health || exit 1"]
+      test: ["CMD", "curl", "-f", "http://localhost:8007/actuator/health"]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -296,7 +296,7 @@ services:
     networks:
       - healthcare-network
     healthcheck:
-      test: ["CMD-SHELL", "wget --no-verbose --tries=1 --spider http://localhost:8001/actuator/health || exit 1"]
+      test: ["CMD", "curl", "-f", "http://localhost:8001/actuator/health"]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -326,7 +326,7 @@ services:
     networks:
       - healthcare-network
     healthcheck:
-      test: ["CMD-SHELL", "wget --no-verbose --tries=1 --spider http://localhost:8008/actuator/health || exit 1"]
+      test: ["CMD", "curl", "-f", "http://localhost:8008/actuator/health"]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -356,7 +356,7 @@ services:
     networks:
       - healthcare-network
     healthcheck:
-      test: ["CMD-SHELL", "wget --no-verbose --tries=1 --spider http://localhost:8010/actuator/health || exit 1"]
+      test: ["CMD", "curl", "-f", "http://localhost:8010/actuator/health"]
       interval: 30s
       timeout: 10s
       retries: 3
