Add frontend service to docker-compose.yml
- Add frontend service definition with nginx configuration
- Expose frontend on port 3000 (maps to container port 80)
- Include frontend in pull-images.sh override file generation
- Frontend uses nginx:1.27-alpine (has wget for healthcheck)
- Frontend proxies API requests to api-gateway:8080

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -370,6 +370,32 @@ services:
           memory: 256M
           cpus: '0.25'
 
+  # Frontend
+  frontend:
+    build:
+      context: .
+      dockerfile: frontend/Dockerfile
+    container_name: healthcare-frontend
+    restart: unless-stopped
+    ports:
+      - "3000:80"
+    networks:
+      - healthcare-network
+    healthcheck:
+      test: ["CMD-SHELL", "wget --quiet --tries=1 --spider http://localhost/ || exit 1"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 10s
+    deploy:
+      resources:
+        limits:
+          memory: 256M
+          cpus: '0.5'
+        reservations:
+          memory: 128M
+          cpus: '0.25'
+
   # PostgreSQL - Patient
   postgres-patient:
     image: postgres:16-alpine
