Improve error handler with detailed logging and exception information
- Add SLF4J logging to GlobalExceptionHandler
- Include exception type, message, root cause, and cause chain in error responses
- Add detailed logging for DataAccessException, RuntimeException, and generic Exception
- Enable DEBUG logging for identity service and transaction management
- Log full stack traces for debugging
- This will help identify the root cause of DATABASE_ERROR during registration

--- a/identity-service/src/main/resources/application.yml
+++ b/identity-service/src/main/resources/application.yml
@@ -71,3 +71,13 @@ management:
       prometheus:
         enabled: true
 
+logging:
+  level:
+    root: INFO
+    com.healthcare.identity: DEBUG
+    org.springframework.transaction: DEBUG
+    org.springframework.dao: DEBUG
+    org.hibernate: INFO
+    org.hibernate.SQL: DEBUG
+    org.hibernate.type.descriptor.sql.BasicBinder: TRACE
+
