--- a/appointment-service/src/main/resources/application.yml
+++ b/appointment-service/src/main/resources/application.yml
@@ -21,6 +21,7 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: false
+    open-in-view: false
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
@@ -36,6 +37,19 @@ spring:
           use_query_cache: false
         connection:
           provider_disables_autocommit: true
+
+  cloud:
+    openfeign:
+      circuitbreaker:
+        enabled: true
+
+feign:
+  client:
+    config:
+      default:
+        connect-timeout: 3000
+        read-timeout: 5000
+        logger-level: basic
 
 eureka:
   client:
