--- a/appointment-service/src/main/resources/application.yml
+++ b/appointment-service/src/main/resources/application.yml
@@ -51,6 +51,14 @@ feign:
         read-timeout: 5000
         logger-level: basic
 
+  kafka:
+    bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVERS:localhost:9092}
+    producer:
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+    properties:
+      spring.json.add.type.headers: false
+
 eureka:
   client:
     service-url:
