--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -139,11 +139,14 @@ services:
       - SPRING_DATASOURCE_USERNAME=postgres
       - SPRING_DATASOURCE_PASSWORD=postgres
       - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://service-discovery:8761/eureka/
+      - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
     depends_on:
       postgres-appointment:
         condition: service_healthy
       service-discovery:
         condition: service_healthy
+      kafka:
+        condition: service_started
     networks:
       - healthcare-network
     healthcheck:
@@ -308,9 +311,12 @@ services:
     environment:
       - SPRING_PROFILES_ACTIVE=docker
       - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://service-discovery:8761/eureka/
+      - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
     depends_on:
       service-discovery:
         condition: service_healthy
+      kafka:
+        condition: service_started
     networks:
       - healthcare-network
     healthcheck:
@@ -327,6 +333,25 @@ services:
         reservations:
           memory: 512M
           cpus: '0.5'
+
+  kafka:
+    image: bitnami/kafka:3.7
+    container_name: healthcare-kafka
+    restart: unless-stopped
+    environment:
+      - KAFKA_ENABLE_KRAFT=yes
+      - KAFKA_CFG_PROCESS_ROLES=broker,controller
+      - KAFKA_CFG_NODE_ID=1
+      - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=1@kafka:9093
+      - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092,CONTROLLER://:9093
+      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092
+      - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT
+      - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
+      - KAFKA_CFG_AUTO_CREATE_TOPICS_ENABLE=true
+    ports:
+      - "9092:9092"
+    networks:
+      - healthcare-network
 
   config-server:
     build:
