--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -334,22 +334,30 @@ services:
           memory: 512M
           cpus: '0.5'
 
+  zookeeper:
+    image: wurstmeister/zookeeper:latest
+    container_name: healthcare-zookeeper
+    restart: unless-stopped
+    ports:
+      - "2181:2181"
+    networks:
+      - healthcare-network
+
   kafka:
-    image: bitnami/kafka:3.7
+    image: wurstmeister/kafka:latest
     container_name: healthcare-kafka
     restart: unless-stopped
     environment:
-      - KAFKA_ENABLE_KRAFT=yes
-      - KAFKA_CFG_PROCESS_ROLES=broker,controller
-      - KAFKA_CFG_NODE_ID=1
-      - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=1@kafka:9093
-      - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092,CONTROLLER://:9093
-      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092
-      - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT
-      - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
-      - KAFKA_CFG_AUTO_CREATE_TOPICS_ENABLE=true
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
+      KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9092
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT
+      KAFKA_BROKER_ID: 1
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
     ports:
       - "9092:9092"
+    depends_on:
+      - zookeeper
     networks:
       - healthcare-network
 
