--- a/identity-service/src/main/resources/application.yml
+++ b/identity-service/src/main/resources/application.yml
@@ -20,6 +20,7 @@ spring:
     password: postgres
     driver-class-name: org.postgresql.Driver
     hikari:
+      auto-commit: false
       maximum-pool-size: 20
       minimum-idle: 5
       connection-timeout: 30000
