kafka problem in appointment

--- a/appointment-service/src/main/resources/application.yml
+++ b/appointment-service/src/main/resources/application.yml
@@ -41,6 +41,13 @@ spring:
     openfeign:
       circuitbreaker:
         enabled: true
+git  kafka:
+    bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVERS:kafka:9092}
+    producer:
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+    properties:
+      spring.json.add.type.headers: false
 
 feign:
   client:
@@ -49,14 +56,6 @@ feign:
         connect-timeout: 3000
         read-timeout: 5000
         logger-level: basic
-
-  kafka:
-    bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVERS:localhost:9092}
-    producer:
-      key-serializer: org.apache.kafka.common.serialization.StringSerializer
-      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
-    properties:
-      spring.json.add.type.headers: false
 
 eureka:
   client:
